improved sidebar reusability

--- a/app/Resources/views/default/categories.html.twig
+++ b/app/Resources/views/default/categories.html.twig
@@ -30,7 +30,7 @@
                             </div>
                             <div class="section_panel_more d-none d-sm-block d-md-none">
                                 <ul>
-                                    <li>more
+                                    <li>{{ localLang.more }}
                                         <ul>
                                             {% for category in viewModel.categories %}
                                                 <li class=""><a href="{{ path('category_details', {'catName':category.categoryName}) }}">{{ category.categoryName }}</a></li>
@@ -75,187 +75,11 @@
 
             <!-- Sidebar -->
 
-            <div class="col-lg-3">
-                <div class="sidebar">
-                    <div class="sidebar_background"></div>
-                    <!-- Top Stories -->
-                    <div class="sidebar_section">
-                        <div class="sidebar_title_container">
-                            <div class="sidebar_title">{{ localLang.topArticles }}</div>
-                            <div class="sidebar_slider_nav">
-                                <div class="custom_nav_container sidebar_slider_nav_container">
-                                    <div class="custom_prev custom_prev_top">
-                                        <i class="fa fa-chevron-left" aria-hidden="true"></i>
-                                    </div>
-                                    <ul id="custom_dots" class="custom_dots custom_dots_top">
-                                        <li class="custom_dot custom_dot_top active"><span></span></li>
-                                        <li class="custom_dot custom_dot_top"><span></span></li>
-                                        <li class="custom_dot custom_dot_top"><span></span></li>
-                                    </ul>
-                                    <div class="custom_next custom_next_top">
-                                        <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="sidebar_section_content">
-
-                            <!-- Top Stories Slider -->
-                            <div class="sidebar_slider_container">
-                                <div class="owl-carousel owl-theme sidebar_slider_top">
-                                    <!-- Top Stories Slider Item -->
-                                    <div class="owl-item">
-
-                                        <!-- Sidebar Post -->
-                                        <div class="side_post">
-                                            <a href="post.html">
-                                                <div class="d-flex flex-row align-items-xl-center align-items-start justify-content-start">
-                                                    <div class="side_post_image">
-                                                        <div><img src="/images/top_1.jpg" alt=""></div>
-                                                    </div>
-                                                    <div class="side_post_content">
-                                                        <div class="side_post_title">How Did van Gogh’s Turbulent
-                                                            Mind
-                                                        </div>
-                                                        <small class="post_meta">Katy Liu<span>Sep 29</span></small>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                        <!-- Sidebar Post -->
-                                        <div class="side_post">
-                                            <a href="post.html">
-                                                <div class="d-flex flex-row align-items-xl-center align-items-start justify-content-start">
-                                                    <div class="side_post_image">
-                                                        <div><img src="/images/top_2.jpg" alt=""></div>
-                                                    </div>
-                                                    <div class="side_post_content">
-                                                        <div class="side_post_title">How Did van Gogh’s Turbulent
-                                                            Mind
-                                                        </div>
-                                                        <small class="post_meta">Katy Liu<span>Sep 29</span></small>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                        <!-- Sidebar Post -->
-                                        <div class="side_post">
-                                            <a href="post.html">
-                                                <div class="d-flex flex-row align-items-xl-center align-items-start justify-content-start">
-                                                    <div class="side_post_image">
-                                                        <div><img src="/images/top_3.jpg" alt=""></div>
-                                                    </div>
-                                                    <div class="side_post_content">
-                                                        <div class="side_post_title">How Did van Gogh’s Turbulent
-                                                            Mind
-                                                        </div>
-                                                        <small class="post_meta">Katy Liu<span>Sep 29</span></small>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                        <!-- Sidebar Post -->
-                                        <div class="side_post">
-                                            <a href="post.html">
-                                                <div class="d-flex flex-row align-items-xl-center align-items-start justify-content-start">
-                                                    <div class="side_post_image">
-                                                        <div><img src="/images/top_4.jpg" alt=""></div>
-                                                    </div>
-                                                    <div class="side_post_content">
-                                                        <div class="side_post_title">How Did van Gogh’s Turbulent
-                                                            Mind
-                                                        </div>
-                                                        <small class="post_meta">Katy Liu<span>Sep 29</span></small>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                    </div>
-
-                                    <!-- Top Stories Slider Item -->
-                                    <div class="owl-item">
-
-                                        <!-- Sidebar Post -->
-                                        <div class="side_post">
-                                            <a href="post.html">
-                                                <div class="d-flex flex-row align-items-xl-center align-items-start justify-content-start">
-                                                    <div class="side_post_image">
-                                                        <div><img src="/images/top_1.jpg" alt=""></div>
-                                                    </div>
-                                                    <div class="side_post_content">
-                                                        <div class="side_post_title">How Did van Gogh’s Turbulent
-                                                            Mind
-                                                        </div>
-                                                        <small class="post_meta">Katy Liu<span>Sep 29</span></small>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                        <!-- Sidebar Post -->
-                                        <div class="side_post">
-                                            <a href="post.html">
-                                                <div class="d-flex flex-row align-items-xl-center align-items-start justify-content-start">
-                                                    <div class="side_post_image">
-                                                        <div><img src="/images/top_2.jpg" alt=""></div>
-                                                    </div>
-                                                    <div class="side_post_content">
-                                                        <div class="side_post_title">How Did van Gogh’s Turbulent
-                                                            Mind
-                                                        </div>
-                                                        <small class="post_meta">Katy Liu<span>Sep 29</span></small>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                        <!-- Sidebar Post -->
-                                        <div class="side_post">
-                                            <a href="post.html">
-                                                <div class="d-flex flex-row align-items-xl-center align-items-start justify-content-start">
-                                                    <div class="side_post_image">
-                                                        <div><img src="/images/top_3.jpg" alt=""></div>
-                                                    </div>
-                                                    <div class="side_post_content">
-                                                        <div class="side_post_title">How Did van Gogh’s Turbulent
-                                                            Mind
-                                                        </div>
-                                                        <small class="post_meta">Katy Liu<span>Sep 29</span></small>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                        <!-- Sidebar Post -->
-                                        <div class="side_post">
-                                            <a href="post.html">
-                                                <div class="d-flex flex-row align-items-xl-center align-items-start justify-content-start">
-                                                    <div class="side_post_image">
-                                                        <div><img src="/images/top_4.jpg" alt=""></div>
-                                                    </div>
-                                                    <div class="side_post_content">
-                                                        <div class="side_post_title">How Did van Gogh’s Turbulent
-                                                            Mind
-                                                        </div>
-                                                        <small class="post_meta">Katy Liu<span>Sep 29</span></small>
-                                                    </div>
-                                                </div>
-                                            </a>
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-            </div>
+           {% embed 'partials/sidebar/sidebar.html.twig' %}
+                {% block sections %}
+                    {% embed 'partials/sidebar/top-stories-section.html.twig' %} {% endembed %}
+                {% endblock %}
+           {% endembed %}
         </div>
 
     </div>
