--- a/app/Resources/views/partials/footer.html.twig
+++ b/app/Resources/views/partials/footer.html.twig
@@ -45,7 +45,7 @@
                             </div>
                             <div class="copyright">
                                 Copyright &copy;<script>document.write(new Date().getFullYear());</script>
-                                All rights reserved | Avision by <a href="https://colorlib.com"
+                                 | Avision by <a href="https://colorlib.com"
                                                                     target="_blank">Colorlib</a>
                             </div>
                         </div>
