--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,95 +3,12 @@
 {% block body %}
 
     <div class="home">
-        <!-- Home Slider -->
-        <div class="home_slider_container">
-            <div class="owl-carousel owl-theme home_slider">
-
-                <!-- Slider Item -->
-                <!--THIS DIV IS GOING TO BE FOR-EACHED!-->
-                <!-- slider shows as many as we pass to it costom.js initHomeSlider() -->
-                {% for sliderItem in sliderArticles %}
-                    <div class="owl-item">
-                        <div class="home_slider_background"
-                             style="background-image:url('{{ sliderItem.article.backgroundImageLink }}')"></div>
-                        <div class="home_slider_content_container">
-                            <div class="container">
-                                <div class="row">
-                                    <div class="col">
-                                        <div class="home_slider_content"
-                                             style="background:rgba(0,0,0,0.4); padding: 10px; -webkit-border-radius: 10px;-moz-border-radius: 10px;border-radius: 10px;">
-                                            <div class="home_slider_item_category trans_200"><a href="{{ path('category_details', {'catName':sliderItem.article.category.categoryName}) }}"
-                                                                                                class="trans_200">{{ sliderItem.article.category.categoryName }}</a>
-                                            </div>
-                                            <div class="home_slider_item_title">
-                                                <a href="{{ path('show_article', {'id':sliderItem.article.id}) }}">{{ sliderItem.article.title }}</a>
-                                            </div>
-                                            <div class="home_slider_item_link">
-                                                <a href="{{ path('show_article', {'id': sliderItem.article.id}) }}"
-                                                   class="text-light">
-                                                    {{ localLang.readMore }} &nbsp;<i class="fa fa-hand-o-right"
-                                                                                      aria-hidden="true"></i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Similar Posts -->
-                        <div class="similar_posts_container">
-                            <div class="container">
-                                <div class="row d-flex flex-row align-items-end">
-
-                                    <!-- Similar Posts -->
-                                    {% for similarArticle in sliderItem.similarArticles %}
-                                        <div class="col-lg-3 col-md-6 similar_post_col">
-                                            <div class="similar_post trans_200">
-                                                <a href="{{ path('show_article',{'id':similarArticle.id}) }}">{{ similarArticle.title }}</a>
-                                            </div>
-                                        </div>
-                                    {% endfor %}
-                                </div>
-                            </div>
-
-                            <div class="home_slider_next_container">
-                                <div class="home_slider_next"
-                                     style="background-image:url('{{ sliderItem.nextArticle.backgroundImageLink }}'); -webkit-background-size: cover;background-size: cover;">
-                                    <div class="home_slider_next_background trans_400"></div>
-                                    <div class="home_slider_next_content trans_400">
-                                        <div class="home_slider_next_title">{{ localLang.nextArticle }}</div>
-                                        <div class="home_slider_next_link">{{ sliderItem.nextArticle.title }}</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                {% endfor %}
-
-            </div>
-
-            <!-- dots control section -->
-            <div class="custom_nav_container home_slider_nav_container">
-                <div class="custom_prev custom_prev_home_slider">
-                    <i class="fa fa-chevron-left" aria-hidden="true"></i>
-                </div>
-                <ul id="custom_dots" class="custom_dots custom_dots_home_slider">
-                    {% for i in sliderArticles %}
-                        <li class="custom_dot custom_dot_home_slider"><span></span></li>
-                    {% endfor %}
-                </ul>
-                <div class="custom_next custom_next_home_slider">
-                    <i class="fa fa-chevron-right" aria-hidden="true"></i>
-                </div>
-            </div>
-
-        </div>
+        {% embed 'partials/home-slider.html.twig' with {'sliderArticles':sliderArticles} %} {% endembed %}
     </div>
 
     <div class="page_content">
-        <div class="container">
-            <!--style="	background: linear-gradient(to right,rgba(221, 232, 106,0.3), rgba(221, 232, 255,1));" -->
+        <div class="container " style="	background: linear-gradient(to right,rgba(249, 249, 232,0.5), rgba(221, 232, 255,0.5));">
+
             <div class="row row-lg-eq-height">
 
                 <!-- Main Content -->
@@ -224,9 +141,7 @@
                             </div>
                             <div class="section_content">
                                 <div class="grid clearfix" id="latestPostsHolder">
-                                    {% for post in latestPosts %}
-                                        {% embed 'partials/articles/small-card-with-background.html.twig' with {'article':post} %} {% endembed %}
-                                    {% endfor %}
+                                    {% embed 'partials/articles/articles-cards-renderer.html.twig' with {'articles':latestPosts} %} {% endembed %}
                                 </div>
 
                             </div>
@@ -238,7 +153,6 @@
                              class="load_more_button text-center trans_200">{{ localLang.loadMore }}</div>
                     </div>
                 </div>
-
 
                 {% embed 'partials/sidebar/sidebar.html.twig' %}
                     {% block sections %}
@@ -273,8 +187,11 @@
                 btn.hide();
                 $.ajax({
                     method: "GET",
-                    url: "{{ path('load_more_articles') }}?offset=" + numberOfLatestArticles,
+                    url: "{{ path('latest_articles_load_more') }}?offset=" + numberOfLatestArticles,
                     success: function (data) {
+                        if(data.indexOf('Number(\'0\')') !== -1){
+                            return;
+                        }
                         latestPostsHolder.append(data).imagesLoaded(function () {
                             latestPostsHolder.masonry('reloadItems');
                             latestPostsHolder.masonry();
