--- a/app/Resources/views/queries/load-more-articles-index-query.html.twig
+++ b/app/Resources/views/queries/load-more-articles-index-query.html.twig
@@ -1,6 +1,4 @@
-{% for article in articles %}
-    {% embed 'partials/articles/small-card-with-background.html.twig' with {'article':article} %} {% endembed %}
-{% endfor %}
+{% embed 'partials/articles/articles-cards-renderer.html.twig' with {'articles':articles} %} {% endembed %}
 <script>
     numberOfLatestArticles += Number('{{ articles|length }}');
 </script>
