polished view counter, set-up facebook share display

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- facebook  -->
-    {#<meta property="fb:app_id" content="{% block fpApp %}877451472440637{% endblock %}">#}
+    <meta property="fb:app_id" content="{% block fpApp %}431697957339837{% endblock %}">
     <meta property="og:type" content="{% block ogType %}website{% endblock %}"/>
     <meta property="og:url" content="{% block ogUrl %}178.239.112.78{% endblock %}"/>
     <meta property="og:title" content="{% block ogTitle %}Jesterous{% endblock %}"/>
