--- a/app/Resources/views/partials/header.html.twig
+++ b/app/Resources/views/partials/header.html.twig
@@ -20,7 +20,7 @@
                     </nav>
                     <div class="search_container ml-auto">
                         <div class="weather">
-                            <i class="fa fa-bell"></i>
+                            <i id="notificationBtn" class="fa fa-bell"></i>
                         </div>
                         <div class="weather">
                             <div class="language-selection">
