--- a/app/Resources/views/partials/articles/article-author-info-panel.html.twig
+++ b/app/Resources/views/partials/articles/article-author-info-panel.html.twig
@@ -1,6 +1,6 @@
 <div class="post_panel post_panel_top d-flex flex-row align-items-center justify-content-start">
     <div class="author_image"><div><img src="{{ article.author.profileImage }}" alt=""></div></div>
-    <div class="post_meta"><a href="#">{{ article.author.username }}</a><span>{{ article.dateAdded.format("D M, Y -  H:m a") }}</span></div>
+    <div class="post_meta"><a href="#">{{ article.author.username }}</a><span>{{ article.dateAdded.format(twigInformer.simpleDateFormat) }}</span></div>
     <div class="post_share ml-sm-auto">
         <span>share</span>
         <ul class="post_share_list">
