--- a/app/Resources/views/partials/comments/article-comment-body.html.twig
+++ b/app/Resources/views/partials/comments/article-comment-body.html.twig
@@ -2,7 +2,7 @@
     <div class="comment_panel d-flex flex-row align-items-center justify-content-start">
         {% if comment.user %}
             <div class="author_image">
-                <div><img src="{{ comment.user.profileImage }}" alt=""></div>
+                <div><img src="{% if comment.user.profileImage %}{{ comment.user.profileImage }}{% else %}{{ asset('images/profile-default.png') }}{{ asset('') }}{% endif %}" alt=""></div>
             </div>
             <small class="post_meta">
                 <a href="#">{{ comment.user.username }}</a>
