--- a/app/Resources/views/author/articles/create-article-html.twig
+++ b/app/Resources/views/author/articles/create-article-html.twig
@@ -84,8 +84,8 @@
 {% endblock %}
 
 {% block sectionScripts %}
-    <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
-    <script src="{{ asset('node_modules/quill-image-resize-module/image-resize.min.js') }}"></script>
+    <script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/quill-image-resize-module@3.0.0/image-resize.min.js"></script>
     <script src="{{ asset('styles/js/quill-manager.js') }}"></script>
     <script>
         ImagePreviewManager.attachEvent("image", "imgPrev");
